--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
@@ -204,7 +204,7 @@
                     <div class="issue_posts">
                         <div class="tit_wrap">
                             <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em>+0</em></h2>
-                            <a href="/myPage/issueMobile"><button class="btn_more">더보기</button></a>
+                            <a href="/myPage/issue"><button class="btn_more">더보기</button></a>
                         </div>
                         <ol id="myIssue">
                             <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
