--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
@@ -135,7 +135,7 @@ function setMyInfo(data){
 	if(data.mbrProfileImgUrl != null && data.mbrProfileImgUrl != ""){
 		html += '<div class="myinfo_pic" ><img src="'+data.mbrProfileImgUrl+'" alt=""></div>';
 	}else{
-		html += '<div class="myinfo_pic"></div>';
+		html += '<div class="myinfo_pic"><img src="/resources/img/mypage/icon-u.png"></div>';
 	}
     html += '<div class="myinfo_con">';
     html += '  <ul>';
