--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -152,7 +152,7 @@
                         </ol>
                     </div>                    
                   </div>
-                  <div id = "myIssue_warp" class="mypage_posts_warp mt10">
+                  <div id="myIssue_warp" class="mypage_posts_warp mt10">
                     <div class="issue_posts">
                         <div class="tit_wrap">
                             <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em id="myIssueTotal">+99</em></h2>
@@ -166,10 +166,10 @@
                         </ol>
                     </div>                    
                   </div>
-                  <div class="mypage_scrap_wrap">
+                  <div id="myScrap_warp" class="mypage_scrap_wrap">
                     <div class="tit_wrap">
                         <h2>스크랩 <span id="myScrapTotal">0</span></h2>
-                        <button class="btn_more">더보기</button>
+                        <a href="/myPage/scrap" class="btn_more">더보기</a>
                     </div>
                     <ul id="myScrap">
                         <li>
@@ -183,10 +183,10 @@
                         </li>                        
                   	</ul>
                   </div>
-                  <div class="mypage_following_wrap">
+                  <div id="myFollowing_warp" class="mypage_following_wrap">
                     <div class="tit_wrap">
                         <h2>팔로잉 <span id="myFollowingTotal">0</span></h2>
-                        <button class="btn_more">더보기</button>
+                        <a href="/myPage/following" class="btn_more">더보기</a>
                     </div>
                     <ul id="myFollowing">
                         <li>
@@ -200,13 +200,13 @@
                         </li>                        
                       </ul>
                   </div>
-                  <div class="mypage_posts_warp">
+                  <div id="myNoti_warp" class="mypage_posts_warp">
                     <div class="noticebox_posts">
                         <div class="tit_wrap">
-                            <h2><img src="/resources/img/img_new/ico_notice.png" alt=""><span>알림함</span><em id="myNotisTotal">0</em></h2>
-                            <button class="btn_more">더보기</button>
+                            <h2><img src="/resources/img/img_new/ico_notice.png" alt=""><span>알림함</span><em id="myNotiTotal">0</em></h2>
+                            <a href="/myPage/notis" class="btn_more">더보기</a>
                         </div>
-                        <ol id="myNotis">
+                        <ol id="myNoti">
                             <li><a href="#">[판매제안] 작품이 너무 맘에 듭니다. 판매로 올려주세요 ♥</a></li>
                             <li><a href="#">[가격제안] 10% 낮춰서 1,000,000원에 구매 희망합니다!</a></li>
                             <li><a href="#">[상세사진요청]후면 사진 요청 드려요.</a></li>
@@ -232,6 +232,9 @@
 				setMyBoast(data.myBoast, data.myBoastTotal);
 				setMyExhbn(data.myExhbn, data.myExhbnTotal);
 				setMyIssue(data.myIssue, data.myIssueTotal);
+				setMyScrap(data.myScrap, data.myScrapTotal);
+				setMyFollowing(data.myFollowing, data.myFollowingTotal);
+				setMyNoti(data.myNoti, data.myNotiTotal);
 			}
 			, error: function(data){
 				alert("오류 발생" + error);
@@ -338,6 +341,102 @@
 
     	}else{
     		$("#myIssue_warp").hide();
+    	}
+    }
+    
+    function setMyScrap(data, total){
+    	var html = '';
+	  	if(total > 0){
+	  		for(i=0; i<data.length; i++){
+	  		    if(i == 2){
+	  		    	html += '    <li class="pic_more">';
+	  		    	if(data[i].scrapDivCd == "WORK"){
+	  		    		html += '      <a href="/deal/workDetail?SqNumber='+data[i].sqNumber+'"><span>+ '+total+'</span><img src="'+data[i].imgUrl+'"></a>';
+	  		    	}else if(data[i].scrapDivCd == "DEAL"){
+	  		    		if(data[i].dealSttsCd == "TP"){
+	  		    			html += '      <a href="/deal/bidding?SqNumber='+data[i].sqNumber+'"><span>+ '+total+'</span><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}else{
+	  		    			html += '      <a href="/deal/soldoutDetail?SqNumber='+data[i].sqNumber+'"><span>+ '+total+'</span><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}
+	  		    	}else if(data[i].scrapDivCd == "COMT"){
+	  		    		if(data[i].comtTypCd == "BOA"){
+	  		    			html += '      <a href="/community/showingOffDetail?SqNumber='+data[i].sqNumber+'"><span>+ '+total+'</span><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}else if(data[i].comtTypCd == "EXH"){
+	  		    			html += '      <a href="/community/exhibitDetail?SqNumber='+data[i].sqNumber+'"><span>+ '+total+'</span><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}else if(data[i].comtTypCd == "ISS"){
+	  		    			html += '      <a href="/community/issueDetail?SqNumber='+data[i].sqNumber+'"><span>+ '+total+'</span><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}
+	  		    	}
+		  		    html += '    </li>';  
+	  		    }else{
+	  		    	html += '    <li>';
+	  		    	if(data[i].scrapDivCd == "WORK"){
+	  		    		html += '      <a href="/deal/workDetail?SqNumber='+data[i].sqNumber+'"><img src="'+data[i].imgUrl+'"></a>';
+	  		    	}else if(data[i].scrapDivCd == "DEAL"){
+	  		    		if(data[i].dealSttsCd == "TP"){
+	  		    			html += '      <a href="/deal/bidding?SqNumber='+data[i].sqNumber+'"><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}else{
+	  		    			html += '      <a href="/deal/soldoutDetail?SqNumber='+data[i].sqNumber+'"><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}
+	  		    	}else if(data[i].scrapDivCd == "COMT"){
+	  		    		if(data[i].comtTypCd == "BOA"){
+	  		    			html += '      <a href="/community/showingOffDetail?SqNumber='+data[i].sqNumber+'"><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}else if(data[i].comtTypCd == "EXH"){
+	  		    			html += '      <a href="/community/exhibitDetail?SqNumber='+data[i].sqNumber+'"><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}else if(data[i].comtTypCd == "ISS"){
+	  		    			html += '      <a href="/community/issueDetail?SqNumber='+data[i].sqNumber+'"><img src="'+data[i].imgUrl+'"></a>';
+	  		    		}
+	  		    	}
+	 	  		    html += '    </li>';
+	  		    }
+	  		}
+	  		$("#myScrap").empty();
+		  	$("#myScrap").append(html).trigger("create");
+	        $("#myScrapTotal").text(total);
+	  	}else{
+	  		$("#myScrap_warp").hide();
+	  	}
+	  	
+    }
+    
+    function setMyFollowing(data, total){
+    	var html = '';
+    	if(total > 0){
+    		for(i=0; i<data.length; i++){
+    			if(i == 2){
+    				html += '<li class="pic_more">';
+    				html += '    <a href="/otherPage/main?mbrSq='+data[i].mbrSq+'"><span>+ '+total+'</span><img src="'+data[i].mbrProfileImgUrl+'"></a>';
+    				html += '</li>';
+    			}else{
+    				html += '<li>';
+   					html += '	<a href="/otherPage/main?mbrSq='+data[i].mbrSq+'"><img src="'+data[i].mbrProfileImgUrl+'"></a>';
+					html += '</li>';
+    			}
+    		}
+    		$("#myFollowing").empty();
+		  	$("#myFollowing").append(html).trigger("create");
+	        $("#myFollowingTotal").text(total);
+    	}else{
+    		$("#myFollowing_wrap").hide();
+    	}
+    }
+    function setMyNoti(data, total){
+    	var html = '';
+    	if(total > 0){
+    		for(i=0; i<data.length; i++){
+    			if(data[i].notiCatCd == "SEL"){
+    				html += '<li><a href="/myPage/notis">['+data[i].notiCatCdNm+'] "'+data[i].artstActvtyNm+' / '+data[i].workNm+'" 판매해주세요.</a></li>';
+    			}else if(data[i].notiCatCd == "PRC"){
+    				html += '<li><a href="/myPage/notis">['+data[i].notiCatCdNm+'] "'+data[i].artstActvtyNm+' / '+data[i].workNm+'" '+data[i].questionContent+'원에 구매희망합니다.</a></li>';
+    			}else if(data[i].notiCatCd == "PIC"){
+    				html += '<li><a href="/myPage/notis">['+data[i].notiCatCdNm+'] "'+data[i].artstActvtyNm+' / '+data[i].workNm+'" '+data[i].questionContent+'</a></li>';
+    			}
+    		}
+    		$("#myNoti").empty();
+		  	$("#myNoti").append(html).trigger("create");
+	        $("#myNotiTotal").text(total);
+    	}else{
+    		$("#myNoti_wrap").hide();
     	}
     }
     
